1.5.0 M1
 * Added ability to build against unreleased Spark versions (SPARKC-242)

********************************************************************************

1.4.0 M3
 * Fixed UDT column bug in SparkSQL (SPARKC-219)
 * Includes all patches up to release 1.2.5 and 1.3.0
   - Fixed connection caching, changed SSL EnabledAlgorithms to Set (SPARKC-227)

1.4.0 M2
 * Includes some unreleased patches from 1.2.5
   - Changed default query timeout from 12 seconds to 2 minutes (SPARKC-220)
   - Add a configurable delay between subsequent query retries (SPARKC-221)
   - spark.cassandra.output.throughput_mb_per_sec can now be set to a decimal (SPARKC-226)
 * Includes unreleased patches from 1.3.0
   - Remove white spaces in c* connection host string (fix by Noorul Islam K M)
 * Includes all changes up to 1.3.0-RC1.

1.4.0 M1
 * Upgrade Spark to 1.4.0 (SPARKC-192)

********************************************************************************

1.3.0
 * Remove white spaces in c* connection host string (fix by Noorul Islam K M)
 * Included from 1.2.5
   - Changed default query timeout from 12 seconds to 2 minutes (SPARKC-220)
   - Add a configurable delay between subsequent query retries (SPARKC-221)
   - spark.cassandra.output.throughput_mb_per_sec can now be set to a decimal (SPARKC-226)
   - Fixed connection caching, changed SSL EnabledAlgorithms to Set (SPARKC-227)

1.3.0 RC1
 * Fixed NoSuchElementException when using UDTs in SparkSQL (SPARKC-218)

1.3.0 M2
 * Support for loading, saving and mapping Cassandra tuples (SPARKC-172)
 * Support for mapping case classes to UDTs on saving (SPARKC-190)
 * Table and keyspace Name suggestions in DataFrames API (SPARKC-186)
 * Removed thrift completely (SPARKC-94)
   - removed cassandra-thrift.jar dependency
   - automatic split sizing based on system.size_estimates table
   - add option to manually force the number of splits
   - Cassandra listen addresses fetched from system.peers table