@@ -56,7 +56,7 @@ object Versions {
   // and install in a local Maven repository. This is all done automatically, however it will work
   // only on Unix/OSX operating system. Windows users have to build and install Spark manually if the
   // desired version is not yet published into a public Maven repository.
-  val Spark           = "1.4.0"
+  val Spark           = "1.5.0"
   val SparkJetty      = "8.1.14.v20131031"
   val JSR166e         = "1.1.0"
 
